Fix column alignments and styles. Euros display, Computed columns

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,12 +16,18 @@ body {
 }
 
 td {
-	padding: 0px;
-  padding-right: 16px;
+  padding: 0px;
+  padding-left: 16px;
 }
 
+th {
+  padding: 0px;
+  padding-right:8px;
+}
+
+
 h2 {
-	color: $vin-blue;
+  color: $vin-blue;
 }
 
 table.search_results {
@@ -40,9 +46,7 @@ table.search_results tr:nth-child(odd) {
 }
 
 div.main_section {
-  padding-left:16px;
   zIndex: 0;
-  padding-right:16px;
   width: '100%';
   color: 'red';
 }
@@ -52,6 +56,7 @@ div.proforma {
   margin-left:8px;
 }
 
-div.proforma .form_input {
-  margin-right:12px;
+div.form_input {
+  padding-right:8px;
+  margin-left:8px;
 }
